--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ margin: 75px;
 
 }
 .breeds-select:hover {
-    /* Add your hover styles here */
-    border: 2px solid #090a0a; /* Example border color */
+  
+    border: 2px solid #090a0a; 
    
   }
 
