--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ margin: 75px;
 .breeds-select:hover {
   
     border: 2px solid #090a0a; 
-   
+    background-color: #ccebf5; 
   }
 
 #dogs-img{
