--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ margin: 75px;
     border: 2px solid #090a0a; 
     background-color: #f7ded7; 
     transition-duration: 60ms;
+    cursor: pointer;
   }
 
 #dogs-img{
