--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     display :flex;
     flex-direction: column;
     align-items: center;
-  
+    /* background-image: url("https://images.pexels.com/photos/34225/spider-web-with-water-beads-network-dewdrop.jpg?auto=compress&cs=tinysrgb&w=600"); */
 }
 .shojumaru-regular {
     font-family: "Shojumaru", system-ui;
@@ -16,19 +16,18 @@ body{
 
   
   
- #cover{
-    /* min-height: 100vm; */
-    width: 100%;
-;
+ #cover{ 
+    min-height: 100vm;
+    width: 100%;;
 
-    /* background-position: center; */
-    /* background-size:cover ; */
+    background-position: center;
+    background-size:cover ; 
 
 
 } 
 
 .header{
-    background-color:rgba(128, 128, 128, 0.808);
+    background-color:rgba(117, 116, 117, 0.651);
     font-family: "Shojumaru", system-ui;
     position: fixed;
     text-align: center;
@@ -55,11 +54,44 @@ margin: 75px;
   }
 
 #dogs-img{
+
     object-fit: contain;
-    width: 30%;
+     width: 30%; 
     margin: 100px auto;
-    position: fixed;
-    top: 10%;
-
-
+  
+    top: 50%;
+   
 }
+
+ .dog-details{ 
+    display: flex;
+flex-direction: column;
+}  
+
+.dislike-button {
+    padding: 10px 16px;
+    margin: 6px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+
+
+  }
+
+  .like-button{
+    /* padding: 8px 16px; */
+    /* margin: 8px; */
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+   
+ 
+
+  }
+
+  .like-button:hover {
+    background-color: #f71010;
+    color: aliceblue;
+  }
