--- a/style.css
+++ b/style.css
@@ -1,30 +1,19 @@
 body{
     margin: 0%;
     padding: 0%;
-
     display :flex;
     flex-direction: column;
     align-items: center;
-    /* background-image: url("https://images.pexels.com/photos/34225/spider-web-with-water-beads-network-dewdrop.jpg?auto=compress&cs=tinysrgb&w=600"); */
+    background-image: url("https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg?auto=compress&cs=tinysrgb&w=600");
+    background-repeat: no-repeat;
+    background-size:cover ;
+    background-position: center;
 }
 .shojumaru-regular {
     font-family: "Shojumaru", system-ui;
     font-weight: 400;
     font-style: normal;
   }
-  
-
-  
-  
- #cover{ 
-    min-height: 100vm;
-    width: 100%;;
-
-    background-position: center;
-    background-size:cover ; 
-
-
-} 
 
 .header{
     background-color:rgba(117, 116, 117, 0.651);
@@ -58,6 +47,8 @@ margin: 75px;
     object-fit: contain;
      width: 30%; 
     margin: 100px auto;
+
+ 
   
     top: 50%;
    
@@ -67,6 +58,21 @@ margin: 75px;
     display: flex;
 flex-direction: column;
 }  
+
+
+
+
+
+.buttons-container {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
 .dislike-button {
     padding: 10px 16px;
@@ -80,12 +86,13 @@ flex-direction: column;
   }
 
   .like-button{
-    /* padding: 8px 16px; */
-    /* margin: 8px; */
+    padding:12px;
+    margin: 8px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+  
    
  
 
@@ -94,4 +101,8 @@ flex-direction: column;
   .like-button:hover {
     background-color: #f71010;
     color: aliceblue;
+  }
+
+  .dislike-button:hover{
+    background-color: green;
   }
