--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@ body{
     display :flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg?auto=compress&cs=tinysrgb&w=600");
+    background-image: url("https://images.pexels.com/photos/2607544/pexels-photo-2607544.jpeg?auto=compress&cs=tinysrgb&w=600");
     background-repeat: no-repeat;
-    background-size:cover ;
+    background-size:cover;
     background-position: center;
+ 
 }
+
 .shojumaru-regular {
     font-family: "Shojumaru", system-ui;
     font-weight: 400;
@@ -16,11 +18,11 @@ body{
   }
 
 .header{
-    background-color:rgba(117, 116, 117, 0.651);
+    background-color:rgba(243, 153, 195, 0.651);
     font-family: "Shojumaru", system-ui;
     position: fixed;
     text-align: center;
-    color: maroon;
+    color: rgb(252, 245, 148);
     margin :0;
     margin-bottom: 30px;
     padding: 16px;
@@ -37,7 +39,7 @@ margin: 75px;
 .breeds-select:hover {
   
     border: 2px solid #090a0a; 
-    background-color: #f7ded7; 
+    background-color: #f0e295; 
     transition-duration: 60ms;
     cursor: pointer;
   }
@@ -45,8 +47,8 @@ margin: 75px;
 #dogs-img{
 
     object-fit: contain;
-     width: 30%; 
-    margin: 100px auto;
+     width: 50%; 
+    margin: 150px auto;
 
  
   
@@ -59,10 +61,6 @@ margin: 75px;
 flex-direction: column;
 }  
 
-
-
-
-
 .buttons-container {
   position: absolute;
   bottom: 0;
@@ -72,13 +70,15 @@ flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+
+
 }
 
 .dislike-button {
     padding: 10px 16px;
     margin: 6px;
-    border: none;
-    border-radius: 4px;
+    border-color:#090a0a;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
 
@@ -88,8 +88,8 @@ flex-direction: column;
   .like-button{
     padding:12px;
     margin: 8px;
-    border: none;
-    border-radius: 4px;
+    border-color:#090a0a;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
   
@@ -101,6 +101,7 @@ flex-direction: column;
   .like-button:hover {
     background-color: #f71010;
     color: aliceblue;
+ 
   }
 
   .dislike-button:hover{
